criado o app do hot-dog, sem finalizacao

--- a/src/global.scss
+++ b/src/global.scss
@@ -13,3 +13,6 @@
 ion-content{
     --background: linear-gradient(135deg, #FAAC58, #F78181)
 }
+ion-padding{
+    --background: linear-gradient(135deg, #FAAC58, #F78181)
+}
