--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,58 +3,28 @@
     <ion-title>
       HOT-DOGÃO
     </ion-title>
-    <ion-buttons slot="primary">
-      <ion-button [routerLink]="['/add-endereco']">
-        <ion-icon name="add">
-        </ion-icon>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
+  <div *ngFor="let dog of dogList">
     <ion-card>
-      <ion-card-header>
-        <ion-card-title>Dogão numero 1</ion-card-title>
-        <br>
-        <ion-card-subtitle>R$:2,50</ion-card-subtitle>
-      </ion-card-header>
       <ion-card-content>
-        Pão, 1 Salsicha, purê, salada.
+        <ion-img src={{dog.image}}></ion-img>
+        <ion-card-title class="title">
+          {{dog.title}}
+        </ion-card-title>
+        <ion-card-subtitle class="desc">
+          {{dog.preco}}
+        </ion-card-subtitle>
+        <h1 class="price">
+          {{dog.desc}}
+        </h1>
+            <ion-button color="danger" expand="block" [routerLink]="['/finalizar-pedido']">
+              <ion-icon name="card"></ion-icon>
+              COMPRAR
+            </ion-button>
       </ion-card-content>
-      <ion-img src="../assets/dog1.jpg"></ion-img>
-      <ion-button expand="block" color="danger"><ion-icon name="card"></ion-icon>Comprar
-      </ion-button>
-    </ion-card>
-
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Dogão numero 2</ion-card-title>
-        <br>
-        <ion-card-subtitle>R$:4,00</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-        Pão, 1 Salsicha, purê, milho, bacon, batata-palha.
-      </ion-card-content>
-      <ion-img src="../assets/dog3.jfif"></ion-img>
-      <ion-button expand="block" color="danger"><ion-icon name="card"></ion-icon>Comprar
-      </ion-button>
-    </ion-card>
-
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Dogão numero 3</ion-card-title>
-        <br>
-        <ion-card-subtitle>R$:6,00</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-        Pão, 2 Salsicha, purê, milho, batat-palha, vinagrete.
-      </ion-card-content>
-      <ion-img src="../assets/dog2.jpg"></ion-img>
-      <ion-button expand="block" color="danger"><ion-icon name="card"></ion-icon>Comprar
-        
-      </ion-button>
     </ion-card>
   </div>
 </ion-content>
