--- a/src/app/finalizar-pedido/finalizar-pedido.page.html
+++ b/src/app/finalizar-pedido/finalizar-pedido.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <div class="ion-padding">
     <ion-card>
-      <img src={{img}} />
+      <ion-img class="" src={{img}}></ion-img>
       <div class="card-title">{{title}}</div>
       <div class="card-subtitle">{{preco}}</div>
     </ion-card>
